# PDF-Forge

./: .gitignore  CHANGELOG.md  Install-pdf-forgeCommand.ps1  README.md  Run.ps1  office_runtime_meta.json  pdf_forge.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  office-e2e.yml
pdf_forge/: __init__.py  __main__.py  app.py  batch_protection.py  compress.py  constants.py  convert_backend.py  core.py  encrypt.py  logsetup.py  menus.py  msoffice.py  office.py  office_decrypt.py  office_discovery.py  office_provision.py  office_runtime.py  office_server.py  ops_compress.py  ops_convert.py  ops_encrypt.py  ops_merge.py  ops_office.py  ops_pages.py  ops_unlock.py  ops_watermark.py  pdf_io.py  prompts.py  render.py  safeio.py  taskqueue.py  ui.py  unlock.py  watermark.py
scripts/: local-gates.py
tests/: conftest.py  helpers.py  test_actual_paths.py  test_cli_robustness.py  test_confirmed_defects.py  test_consent_and_report.py  test_convert_backend.py  test_csv_handling.py  test_delete_and_compress.py  test_finalization.py  test_installer.py  test_launcher.py  test_office_closure.py  test_office_e2e.py  test_office_links.py  test_office_validation.py  test_output_validation.py  test_pdf_forge.py  test_protect_and_unlock.py  test_python_floor.py  test_queue_lifecycle.py  test_queued_flows.py  test_regressions.py  test_regressions_images.py  test_regressions_office_runtime.py  test_regressions_office_sources.py  test_regressions_pages.py  test_regressions_prompts.py  test_regressions_protection.py  test_regressions_queue.py  test_render_and_images.py  test_runtime_trust.py  test_safeio.py  test_selection_parsing.py  test_server_liveness.py  test_source_identity.py  test_state_store.py  test_submenus.py  test_version_consistency.py  test_watermark_closure.py  (+3 more)
