# Central configuration for PDF Forge development tooling.
#
# The application itself is run from the checkout (Run.ps1 / `python -m pdf_forge`),
# so this file deliberately configures tools and metadata only - it does not
# change how the app is launched or packaged for users.

[project]
name = "pdf-forge"
# Single source of truth: the version lives in pdf_forge/constants.py, which is
# what the application, the banner and --version already report. Declaring it
# here as well let the two drift (metadata said 2.0.0 while the app said 2.0.1).
dynamic = ["version"]
description = "Interactive, local PDF toolkit (page tools, merge, convert, protect)."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
# Declared, not auto-discovered. Flat-layout discovery treats every root
# directory with an identifier-legal name as a package, so the git-ignored
# `logs/` this app writes at runtime was enough to fail the build outright:
#   error: Multiple top-level packages discovered in a flat-layout:
#          ['logs', 'pdf_forge']
# A clean CI checkout has no logs/ and so never saw it, while any machine that
# had actually run the app could not build a wheel at all.
packages = ["pdf_forge"]

[tool.setuptools.dynamic]
version = { attr = "pdf_forge.constants.APP_VERSION" }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# -q keeps output readable; --durations surfaces a slow test before it becomes a
# CI problem; strict markers stop silent typos in @pytest.mark names.
addopts = "-q --strict-markers --durations=10"
filterwarnings = ["error::DeprecationWarning:pdf_forge.*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".tools", "graphify-out"]

[tool.ruff.lint]
# Correctness-focused gate: pyflakes (F), bugbear (B), pycodestyle errors (E),
# and the runtime-relevant Ruff rules. Purely stylistic modernization families
# (UP*, most SIM/RUF cosmetics) are deliberately NOT gated - enabling them would
# require a large mechanical rewrite unrelated to any defect, and a noisy gate
# gets ignored. Tighten this when a dedicated modernization change is made.
select = ["E4", "E7", "E9", "F", "B", "C4"]
ignore = [
    "E501",    # long lines are handled by review, not the linter
    "B008",    # function calls in argument defaults are used deliberately here
    "B905",    # zip(strict=) needs a per-call decision, not a blanket rewrite
    "C408",    # dict(...) with kwargs reads better for save/convert options
]

[tool.ruff.lint.per-file-ignores]
# The package intentionally re-exports through star imports (documented layering).
"pdf_forge/*.py" = ["F403", "F405"]
"tests/*.py" = ["F403", "F405", "B011"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
# The package leans on star re-exports, so only the self-contained, pure modules
# are type-checked strictly; widening this is tracked work, not a silent gap.
files = ["pdf_forge/safeio.py", "pdf_forge/office.py"]
follow_imports = "silent"

[tool.coverage.run]
source = ["pdf_forge"]
omit = ["pdf_forge/__main__.py"]

[tool.coverage.report]
# Set just below what the suite genuinely covers today, so it acts as a real
# regression guard rather than an aspirational number that is simply switched
# off when it fails. Raise it deliberately as coverage grows.
fail_under = 45
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
